--- a/_config.yml
+++ b/_config.yml
@@ -1,54 +1,20 @@
-# Jekyll configuration for GitHub Pages
+# Minimal Jekyll config for GitHub-style rendering
 title: MegaReach Documentation
-description: The Ultimate Social Growth Platform - AI-powered engagement and blockchain rewards
-theme: jekyll-theme-minimal
-baseurl: "" # Leave empty if using custom domain
-url: "https://docs.megareach.xyz" # Your custom domain
+description: The Ultimate Social Growth Platform
 
-# Navigation
-navigation:
-  - title: Home
-    url: /
-  - title: Getting Started
-    url: /docs/getting-started
-  - title: Features
-    url: /docs/features/overview
-  - title: API
-    url: /docs/api/
+# No theme - use GitHub's default markdown rendering
+theme: null
 
-# Plugins
-plugins:
-  - jekyll-relative-links
-  - jekyll-seo-tag
-  - jekyll-sitemap
-
-# Markdown settings
+# Enable GitHub Flavored Markdown
 markdown: kramdown
 kramdown:
   input: GFM
-  syntax_highlighter: rouge
+  hard_wrap: false
 
-# Include/Exclude
-include:
-  - docs
-  - README.md
-  - index.md
+# Basic plugins
+plugins:
+  - jekyll-relative-links
 
-# Collections
-collections:
-  docs:
-    output: true
-    permalink: /:path
-
-# Defaults
-defaults:
-  - scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: "default"
-  - scope:
-      path: "docs"
-      type: "pages"
-    values:
-      layout: "default"
+relative_links:
+  enabled: true
+  collections: true
